--- a/main/style.css
+++ b/main/style.css
@@ -30,10 +30,10 @@
     background-color: grey;
     display: flex;
     width: auto;
-    height: 940px;
+    height: 100px;
     border: 5px solid white;
     padding: 15px 25px;
-
+    
 
     flex-direction: column;
     
@@ -41,5 +41,9 @@
 
 .pepper-steak, .baby-back-ribs, .mac-and-cheese {
     color: white;
-    
+
+}
+
+.body-page {
+    background-color: black;
 }
