sync windows to mac copy

--- a/recipes/babyBackRibs/babybackribs.css
+++ b/recipes/babyBackRibs/babybackribs.css
@@ -3,3 +3,14 @@
 *::after {
     box-sizing: border-box;
 }
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+.body_page {
+    background-color: antiquewhite;
+
+}
+
