--- a/main/style.css
+++ b/main/style.css
@@ -9,41 +9,93 @@
 	padding: 0px;
 }
 
-.odin-recipes {
+body {
+    box-sizing: border-box;
     background-color: #D6D3D1;
-    color: #292524;
-    width: auto;
-    height: 100px;
     border-top: 5px solid grey;
     border-left: 5px solid grey;
     border-right: 5px solid grey;
-    
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-
-
-}
-
-.recipes-list {
-    background-color: grey;
-    display: flex;
+    border-bottom: 5px solid grey;
+    color:#292524;
     width: auto;
-    height: 100px;
-    border: 5px solid white;
-    padding: 15px 25px;
-    
-
-    flex-direction: column;
-    
+    height: auto;
+    border-radius: 5px;
 }
 
-.pepper-steak, .baby-back-ribs, .mac-and-cheese {
-    color: white;
-
+h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+    border: 5px solid #292524;
+    padding: 10px;
+    margin: 20px;
+    text-align: center;
+    border-radius: 5px;
 }
 
-.body-page {
-    background-color: black;
+.odin-recipes {
+    text-align: center;
+    color: #292524;
+    margin: 20px;
+    font-size: 36px;
+}
+.home_images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.image_peppersteak {
+    display: content-box;
+    border: 5px solid #292524;
+    border-radius: 5px;
+}
+
+.image_babybackribs {
+    display: content-box;
+    border: 5px solid #292524;
+    border-radius: 5px;
+}
+
+.image_macandcheese {
+    display: content-box;
+    border: 5px solid #292524;
+    border-radius: 5px;
+}
+
+.pepper-steak {
+    margin-left: 20px;
+    margin-top: 10px;
+    display: inline-block;
+    text-decoration: none;
+    color: #292524;
+    font-size: 18px;
+    border: 2px solid #292524;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.baby-back-ribs {
+    margin-left: 20px;
+    margin-top: 10px;
+    display: inline-block;
+    text-decoration: none;
+    color: #292524;
+    font-size: 18px;
+    border: 2px solid #292524;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.mac-and-cheese {
+    margin-left: 20px;
+    margin-top: 10px;
+    display: inline-block;
+    text-decoration: none;
+    color: #292524;
+    font-size: 18px;
+    border: 2px solid #292524;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
