--- a/recipes/pepperSteak/peppersteak.css
+++ b/recipes/pepperSteak/peppersteak.css
@@ -1,24 +1,21 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
 
 .home_Button {
+    display: inline-block;
     margin-left: 20px;
     margin-top: 10px;
-    display: inline-block;
-    text-decoration: none;
-    color: #292524;
-    font-size: 18px;
-    border: 2px solid #292524;
     padding: 5px 10px;
+    border: 2px solid #292524;
     border-radius: 5px;
+    color: #292524;
+    text-decoration: none;
+    font-family: 'Alfa Slab One';font-size: 18px;
+    
+}
+
+.home_Button:hover {
+    background-color: #292524;
+    color: #D6D3D1;
 }
 
 body {
@@ -31,13 +28,11 @@ body {
 }
 
 .pepper_steak {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Agbalumo';font-size: 50px;
     font-weight: 700;
-    border: 5px solid #292524;
     padding: 10px;
     margin: 20px;
     text-align: center;
-    border-radius: 5px;;
 }
 
 .fig {
@@ -45,6 +40,7 @@ body {
     color: #555555;
     margin-top: 5px;
     text-align: center;
+    font-weight: bold;
 }
 
 .image_peppersteak {
@@ -59,7 +55,7 @@ body {
     margin-left: 30px;
     margin-bottom: 10px;
     margin-left: 7px;
-    font-size: 24px;
+    font-family: 'Akaya Kanadaka';font-size: 24px;
     color:#292524
 }
 
@@ -73,4 +69,9 @@ ol {
 
 p {
     margin-left: 15px;
+}
+
+p, ul, ol {
+    margin-bottom: 10px;
+    font-family: 'Poppins';font-size: 16px;
 }
