--- a/main/style.css
+++ b/main/style.css
@@ -1,12 +1,12 @@
-
+* {
+    margin: 0;
+    padding: 0;
+}
 
 body {
     box-sizing: border-box;
     background-color: #D6D3D1;
-    border-top: 5px solid grey;
-    border-left: 5px solid grey;
-    border-right: 5px solid grey;
-    border-bottom: 5px solid grey;
+    border: 5px solid grey;
     color:#292524;
     width: auto;
     height: auto;
@@ -20,64 +20,20 @@ body {
     margin: 20px;    text-align: center;
     color: #292524;
 }
-.home_images {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
-}
 
-.image_peppersteak {
+.image_peppersteak, .image_babybackribs, .image_macandcheese {
     display: content-box;
     border: 5px solid #292524;
     border-radius: 5px;
 }
 
-.image_babybackribs {
-    display: content-box;
-    border: 5px solid #292524;
-    border-radius: 5px;
-}
-
-.image_macandcheese {
-    display: content-box;
-    border: 5px solid #292524;
-    border-radius: 5px;
-}
-
-.pepper-steak {
-    margin-left: 20px;
-    margin-top: 10px;
+.pepper-steak, .baby-back-ribs, .mac-and-cheese {
     display: inline-block;
     text-decoration: none;
     color: #292524;
-    font-family: 'Akaya Kanadaka';font-size: 18px;
+    font-family: 'Akaya Kanadaka';font-size: 25px;
     border: 2px solid #292524;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-
-.baby-back-ribs {
-    margin-left: 20px;
-    margin-top: 10px;
-    display: inline-block;
-    text-decoration: none;
-    color: #292524;
-    font-family: 'Akaya Kanadaka';font-size: 18px;
-    border: 2px solid #292524;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-
-.mac-and-cheese {
-    margin-left: 20px;
-    margin-top: 10px;
-    display: inline-block;
-    text-decoration: none;
-    color: #292524;
-    font-family: 'Akaya Kanadaka';font-size: 18px;
-    border: 2px solid #292524;
+    margin: 10px;
     padding: 5px 10px;
     border-radius: 5px;
 }
@@ -85,5 +41,4 @@ body {
 .pepper-steak:hover, .baby-back-ribs:hover, .mac-and-cheese:hover {
     background-color: #292524;
     color: #D6D3D1;
-
 }
