--- a/main/recipes.css
+++ b/main/recipes.css
@@ -1,8 +1,12 @@
 .recipes {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
     list-style-type: none;
-    
+    background-color: grey;
+    padding: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 5px;
 }
 .recipeOne { /*Pepper Steak*/
     text-align: center;
